--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
-
 {
   "name": "arc-slash-bridge",
   "private": true,
   "type": "module",
-  "dependencies": {
-    "tweetnacl": "^1.0.3"
-  }
+  "dependencies": { "tweetnacl": "^1.0.3" }
 }
