--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "arc-slash-bridge",
   "private": true,
   "type": "module",
-  "dependencies": { "tweetnacl": "^1.0.3" }
+  "engines": { "node": ">=18" },
+  "dependencies": {
+    "tweetnacl": "^1.0.3"
+  }
 }
